# personal-finance-analytics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  WORKSPACE_ANALIZ_VE_PUBLIC_PROJE_PLANI.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
ai-engine/: Dockerfile  pyproject.toml
ai-engine/src/: config.py  dependencies.py  main.py
ai-engine/src/core/: exceptions.py  logging.py  middleware.py  tracing.py
ai-engine/src/prompts/: anomaly_detection.j2  budget_advice.j2  chat_response.j2  monthly_insight.j2
ai-engine/src/repositories/: context_repo.py  insight_repo.py
ai-engine/src/routers/: chat.py  insights.py
ai-engine/src/runners/: anomaly_runner.py  insight_runner.py  recommendation_runner.py
ai-engine/src/schemas/: chat.py  insight.py
ai-engine/src/services/: claude_service.py  context_builder.py
ai-engine/tests/unit/: test_insight_runner.py
analytics-db/init/: 01-schema.sql  02-setup-fdw.sh  02-setup-fdw.sql
api/: Dockerfile  pyproject.toml
api/src/: config.py  dependencies.py  main.py
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt/macros/: budget_status.sql  generate_schema_name.sql
docs/: architecture.md  build-log.md
docs/ai-engine/: README.md
docs/api/: README.md  walkthrough.md
docs/dbt/: README.md  pipeline-walkthrough.md
docs/observability/: README.md
mock-data/: Dockerfile  generate.py  requirements.txt
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo.yaml
superset/: init.sh  superset_config.py
(+44 files in other folders)
