[project]
name = "ai-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "anthropic",
  "jinja2",
  "asyncpg",
  "structlog",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-grpc",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
